Add server simulation

--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -59,11 +59,12 @@ sim-time-limit = 70s
 *.mechost.app[1].localAddress = "mechost"
 *.mechost.app[1].mecOrchestratorPort = 3300
 *.mechost.app[1].mecOrchestratorAddress = "mechost"
+*.mechost.color = "green"
 
 *.car.numApps = 1
 *.car.app[0].typename = "RegistrationVim"
 *.car.app[0].localPort = 3333
-*.car.app[0].destPort = 3334
+*.car.app[0].destPort = 3333
 *.car.app[0].destAddress = "mechost" 
 *.car.app[0].localAddress = "car" 
 
