Modified simulation network

--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -44,6 +44,12 @@ sim-time-limit = 70s
 *.car.nrMasterId = 1     # ignored if dynamic association is disabled
 *.car.nrMacCellId = 1    # ignored if dynamic association is disabled
 
+*.fakeclient.cellularNic.nrPhy.dynamicCellAssociation = true
+*.fakeclient.masterId = 0     # ignored if dynamic association is disabled
+*.fakeclient.macCellId = 0    # ignored if dynamic association is disabled
+*.fakeclient.nrMasterId = 1     # ignored if dynamic association is disabled
+*.fakeclient.nrMacCellId = 1    # ignored if dynamic association is disabled
+
 #**.amcMode = "D2D"
 #*.car.cellularNic.d2dInitialMode = true
 #*.viManager.cellularNic.d2dInitialMode = true
@@ -56,15 +62,28 @@ sim-time-limit = 70s
 #	App configuration
 ###
 *.mechost.app[0].localAddress = "mechost" 
+*.mechost.app[0].serverDestAddress = "mechost"
 *.mechost.app[1].localAddress = "mechost"
 *.mechost.app[1].mecOrchestratorPort = 3300
 *.mechost.app[1].mecOrchestratorAddress = "mechost"
 *.mechost.color = "green"
 
-*.car.numApps = 1
-*.car.app[0].typename = "RegistrationVim"
-*.car.app[0].localPort = 3333
-*.car.app[0].destPort = 3333
-*.car.app[0].destAddress = "mechost" 
-*.car.app[0].localAddress = "car" 
+*.car.numApps = 2
+*.car.app[0].typename = "VirtualisationInfrastructureApp"
+*.car.app[0].localPort = 2222
+*.car.app[0].localAddress = "car"
+*.car.app[0].vimAddress = "mechost"
+*.car.app[0].vimPort = 3333
+*.car.app[1].typename = "RegistrationVim"
+*.car.app[1].localPort = 3333
+*.car.app[1].destPort = 3333
+*.car.app[1].destAddress = "mechost" 
+*.car.app[1].localAddress = "car" 
+
+*.fakeclient.numApps = 1
+*.fakeclient.app[0].typename = "InstantiationMecpm"
+*.fakeclient.app[0].localPort = 3222
+*.fakeclient.app[0].destPort = 3334
+*.fakeclient.app[0].destAddress = "mechost" 
+*.fakeclient.app[0].localAddress = "fakeclient" 
 
