Change due to MecHostDyn refactoring

--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -16,21 +16,21 @@ sim-time-limit = 70s
 ###
 #	Nodes configuration
 ###
-**.mechost.macNodeId = 0
+**.mechost.*.macNodeId = 0
 
-*.mechost.cellularNic.nrPhy.dynamicCellAssociation = true
-*.mechost.masterId = 0     # ignored if dynamic association is disabled
-*.mechost.macCellId = 0    # ignored if dynamic association is disabled
-*.mechost.nrMasterId = 1     # ignored if dynamic association is disabled
-*.mechost.nrMacCellId = 1    # ignored if dynamic association is disabled
+*.mechost.*.cellularNic.nrPhy.dynamicCellAssociation = true
+*.mechost.*.masterId = 0     # ignored if dynamic association is disabled
+*.mechost.*.macCellId = 0    # ignored if dynamic association is disabled
+*.mechost.*.nrMasterId = 1     # ignored if dynamic association is disabled
+*.mechost.*.nrMacCellId = 1    # ignored if dynamic association is disabled
 
 **.gNodeB1.macCellId = 1
 **.gNodeB1.macNodeId = 1
 
-**.mechost.mobility.initFromDisplayString = false
-**.mechost.mobility.initialX = 380m
-**.mechost.mobility.initialY = 150m
-**.mechost.mobility.initialZ = 0m
+**.mechost.*.mobility.initFromDisplayString = false
+**.mechost.*.mobility.initialX = 380m
+**.mechost.*.mobility.initialY = 150m
+**.mechost.*.mobility.initialZ = 0m
 
 *.car.mobilityType = "LinearMobility"
 **.car.mobility.initialX = 100m
@@ -61,29 +61,32 @@ sim-time-limit = 70s
 ###
 #	App configuration
 ###
-*.mechost.app[0].localAddress = "mechost" 
-*.mechost.app[0].serverDestAddress = "mechost"
-*.mechost.app[1].localAddress = "mechost"
-*.mechost.app[1].mecOrchestratorPort = 3300
-*.mechost.app[1].mecOrchestratorAddress = "mechost"
+*.mechost.vim.app[0].localAddress = "mechost.vim" 
+*.mechost.vim.app[0].serverDestAddress = "mechost.vim"
+*.mechost.vim.app[1].localAddress = "mechost.vim"
+*.mechost.vim.app[1].vimAddress = "mechost.vim"
+*.mechost.vim.app[1].vimPort = 3333
+*.mechost.mecpm.app[0].localAddress = "mechost.mecpm"
+*.mechost.mecpm.app[0].mecOrchestratorPort = 3300
+*.mechost.mecpm.app[0].mecOrchestratorAddress = "mechost.vim"
 *.mechost.color = "green"
 
 *.car.numApps = 2
 *.car.app[0].typename = "VirtualisationInfrastructureApp"
 *.car.app[0].localPort = 2222
 *.car.app[0].localAddress = "car"
-*.car.app[0].vimAddress = "mechost"
+*.car.app[0].vimAddress = "mechost.vim"
 *.car.app[0].vimPort = 3333
 *.car.app[1].typename = "RegistrationVim"
 *.car.app[1].localPort = 3333
 *.car.app[1].destPort = 3333
-*.car.app[1].destAddress = "mechost" 
+*.car.app[1].destAddress = "mechost.vim" 
 *.car.app[1].localAddress = "car" 
 
 *.fakeclient.numApps = 1
 *.fakeclient.app[0].typename = "InstantiationMecpm"
 *.fakeclient.app[0].localPort = 3222
 *.fakeclient.app[0].destPort = 3334
-*.fakeclient.app[0].destAddress = "mechost" 
+*.fakeclient.app[0].destAddress = "mechost.mecpm" 
 *.fakeclient.app[0].localAddress = "fakeclient" 
 
