From general-ue to meccar

--- a/simulations/mechost_network1/omnetpp.ini
+++ b/simulations/mechost_network1/omnetpp.ini
@@ -33,7 +33,8 @@ network = simulation_examples.simulations.mechost_network1.MECHostNetwork1
 *.ue.app[0].typename = "ClientResourceApp"
 *.ue.app[0].localAddress = "ue"
 *.ue.app[0].destAddress = "server"
-*.ue.app[0].startTime=0.1s
+*.ue.app[0].startTime=0.05s
+*.ue.app[0].minReward = 40
 
 
 # Server App
