Multiple devices testing

--- a/simulations/mechost_network1/omnetpp.ini
+++ b/simulations/mechost_network1/omnetpp.ini
@@ -1,6 +1,8 @@
 [General]
 ############### Number of Resource Blocks ################
 **.numBands = 50 # this value should be kept equal to the number of RBs
+debug-on-errors=true
+debugger-attach-on-error=true
 
 ############### Transmission Power ##################
 **.ueTxPower = 26
@@ -19,22 +21,29 @@ network = simulation_examples.simulations.mechost_network1.MECHostNetwork1
 
 ############## UE configuration ##################
 # connect the UE's NIC to the corresponding serving eNB
-*.ue.macCellId = 1
-*.ue.masterId = 1
-*.ue.nrMacCellId = 1
-*.ue.nrMasterId = 1
+*.numCars = 1
+*.ue[*].macCellId = 1
+*.ue[*].masterId = 1
+*.ue[*].nrMacCellId = 1
+*.ue[*].nrMasterId = 1
 
 # UE position
-*.ue.mobility.initialX = 450m
-*.ue.mobility.initialY = 350m
+*.ue[*].mobility.initialX = 450m
+*.ue[*].mobility.initialY = 350m
 
 # UE App
-*.ue.numApps = 1
-*.ue.app[0].typename = "ClientResourceApp"
-*.ue.app[0].localAddress = "ue"
-*.ue.app[0].destAddress = "server"
-*.ue.app[0].startTime=0.05s
-*.ue.app[0].minReward = 40
+*.ue[*].numApps = 1
+*.ue[*].app[0].typename = "ClientResourceApp"
+*.ue[0].app[0].localAddress = "ue[0]"
+#*.ue[1].app[0].localAddress = "ue[1]"
+#*.ue[2].app[0].localAddress = "ue[2]"
+*.ue[*].app[0].destAddress = "server"
+*.ue[*].app[0].startTime = 0.05s
+*.ue[0].app[0].minReward = 15
+#*.ue[2].app[0].minReward = 20
+#*.ue[0].app[0].parkTime = 1s
+#*.ue[1].app[0].parkTime = 0.5s
+#*.ue[2].app[0].parkTime = 3s
 
 
 # Server App
