Add support for mec app termination

--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -66,9 +66,9 @@ sim-time-limit = 70s
 *.mechost.vim.app[1].localAddress = "mechost.vim"
 *.mechost.vim.app[1].vimAddress = "mechost.vim"
 *.mechost.vim.app[1].vimPort = 3333
-*.mechost.mecpm.app[0].localAddress = "mechost.mecpm"
-*.mechost.mecpm.app[0].mecOrchestratorPort = 3300
-*.mechost.mecpm.app[0].mecOrchestratorAddress = "mechost.vim"
+*.mechost.mecPlatformManager.app[0].localAddress = "mechost.mecPlatformManager"
+*.mechost.mecPlatformManager.app[0].mecOrchestratorPort = 3300
+*.mechost.mecPlatformManager.app[0].mecOrchestratorAddress = "mechost.vim"
 *.mechost.color = "green"
 
 *.car.numApps = 2
@@ -87,6 +87,6 @@ sim-time-limit = 70s
 *.fakeclient.app[0].typename = "InstantiationMecpm"
 *.fakeclient.app[0].localPort = 3222
 *.fakeclient.app[0].destPort = 3334
-*.fakeclient.app[0].destAddress = "mechost.mecpm" 
+*.fakeclient.app[0].destAddress = "mechost.mecPlatformManager" 
 *.fakeclient.app[0].localAddress = "fakeclient" 
 
