Update simulation with server

--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -63,6 +63,7 @@ sim-time-limit = 70s
 ###
 *.mechost.vim.app[0].localAddress = "mechost.vim" 
 *.mechost.vim.app[0].serverDestAddress = "mechost.vim"
+*.mechost.vim.app[0].brokerAddress = "server"
 *.mechost.vim.app[1].localAddress = "mechost.vim"
 *.mechost.vim.app[1].vimAddress = "mechost.vim"
 *.mechost.vim.app[1].vimPort = 3333
@@ -88,5 +89,9 @@ sim-time-limit = 70s
 *.fakeclient.app[0].localPort = 3222
 *.fakeclient.app[0].destPort = 3334
 *.fakeclient.app[0].destAddress = "mechost.mecPlatformManager" 
-*.fakeclient.app[0].localAddress = "fakeclient" 
+*.fakeclient.app[0].localAddress = "fakeclient"
+
+*.server.numApps = 1
+*.server.app[*].localAddress = "server"
+*.server.app[*].typename = "HttpBrokerApp"
 
