working simulation pub/sub - fixed hostid

--- a/simulations/pubsubTest/omnetpp.ini
+++ b/simulations/pubsubTest/omnetpp.ini
@@ -13,6 +13,7 @@
 
 # This configuration is used only to test the effectiveness of resourcesharing apps
 [Config TestNoPublishers]
+description = Testing communication between MEC Host and server
 network = simulation_examples.simulations.pubsubTest.PubsubNet
 ############### e/gNodeB configuration #################
 *.gnb.mobility.initialX = 450m
@@ -65,8 +66,21 @@ network = simulation_examples.simulations.pubsubTest.PubsubNet
 
 
 # Server App
-*.server.numApps = 1
-*.server.app[*].localAddress = "server"
-*.server.app[*].typename = "HttpBrokerApp"
+*.server.numApps = 2
+*.server.app[0].typename = "HttpBrokerApp"
 
+[Config TestWithPublishers]
+description = Testing message publishing
+extends = TestNoPublishers
+*.ue[*].numApps = 1
+*.ue[*].app[0].typename = "ClientResourceApp"
+*.ue[0].app[0].localAddress = "ue[0]"
+*.ue[*].app[0].destAddress = "server"
+*.ue[*].app[0].startTime = 0.05s
+*.ue[0].app[0].minReward = 15
+*.ue[0].app[0].viPort = 1000 
+
+
+*.server.app[1].typename = "ResourceRegisterApp"
+*.server.app[1].startTime = 0.01s
 
