add support for broker publishing

--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -78,11 +78,14 @@ sim-time-limit = 70s
 *.car.app[0].localAddress = "car"
 *.car.app[0].vimAddress = "mechost.vim"
 *.car.app[0].vimPort = 3333
-*.car.app[1].typename = "RegistrationVim"
+*.car.app[1].typename = "ClientResourceApp"
 *.car.app[1].localPort = 3333
-*.car.app[1].destPort = 3333
-*.car.app[1].destAddress = "mechost.vim" 
-*.car.app[1].localAddress = "car" 
+#*.car.app[1].destPort = 3333
+*.car.app[1].destAddress = "server" 
+*.car.app[1].localAddress = "car"
+*.car.app[1].viPort = 2222
+*.car.app[1].startTime = 0.05s
+*.car.app[1].parkTime = 30s
 
 *.fakeclient.numApps = 1
 *.fakeclient.app[0].typename = "InstantiationMecpm"
@@ -91,7 +94,8 @@ sim-time-limit = 70s
 *.fakeclient.app[0].destAddress = "mechost.mecPlatformManager" 
 *.fakeclient.app[0].localAddress = "fakeclient"
 
-*.server.numApps = 1
-*.server.app[*].localAddress = "server"
-*.server.app[*].typename = "HttpBrokerApp"
+*.server.numApps = 2
+*.server.app[0].typename = "HttpBrokerApp"
+*.server.app[1].typename = "ResourceRegisterApp"
+*.server.app[1].startTime = 0.02s
 
