feat - Add UeAPPInteractionTester, updated simulation with service registry interaction

--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -2,6 +2,8 @@
 network = simulation_examples.simulations.mechostdyn_test.MECHOSTDYN_test1
 sim-time-limit = 70s
 
+num-rngs = 3
+
 ###
 #	LTE configuration
 ###
@@ -38,17 +40,25 @@ sim-time-limit = 70s
 **.car.mobility.initialMovementHeading = 0deg
 **.car.mobility.speed = 10mps
 
+*.fakeclient.mobilityType = "LinearMobility"
+**.fakeclient.mobility.initialMovementHeading = 0deg
+**.fakeclient.mobility.speed = 10mps
+
+*.fakeclient2.mobilityType = "LinearMobility"
+**.fakeclient2.mobility.initialMovementHeading = 90deg
+**.fakeclient2.mobility.speed = 10mps
+
 *.car.cellularNic.nrPhy.dynamicCellAssociation = true
 *.car.masterId = 0     # ignored if dynamic association is disabled
 *.car.macCellId = 0    # ignored if dynamic association is disabled
 *.car.nrMasterId = 1     # ignored if dynamic association is disabled
 *.car.nrMacCellId = 1    # ignored if dynamic association is disabled
 
-*.fakeclient.cellularNic.nrPhy.dynamicCellAssociation = true
-*.fakeclient.masterId = 0     # ignored if dynamic association is disabled
-*.fakeclient.macCellId = 0    # ignored if dynamic association is disabled
-*.fakeclient.nrMasterId = 1     # ignored if dynamic association is disabled
-*.fakeclient.nrMacCellId = 1    # ignored if dynamic association is disabled
+*.fakeclient*.cellularNic.nrPhy.dynamicCellAssociation = true
+*.fakeclient*.masterId = 0     # ignored if dynamic association is disabled
+*.fakeclient*.macCellId = 0    # ignored if dynamic association is disabled
+*.fakeclient*.nrMasterId = 1     # ignored if dynamic association is disabled
+*.fakeclient*.nrMacCellId = 1    # ignored if dynamic association is disabled
 
 #**.amcMode = "D2D"
 #*.car.cellularNic.d2dInitialMode = true
@@ -56,6 +66,28 @@ sim-time-limit = 70s
 #
 #*.gNodeB1.cellularNic.nrPhy.enableD2DCqiReporting = true
 #**.usePreconfiguredTxParams = false
+
+## MeHost resources
+**.mechost.maxMECApps = 100	
+
+**.mechost.eNBList = "gNodeB1"
+
+## MecPlatform settings
+**.mechost.mecPlatform.numMecServices = 1
+**.mechost.mecPlatform.mecService[0].typename = "LocationService"
+**.mechost.mecPlatform.mecService[0].localAddress = "mechost.mecPlatform" #da cambiare!!
+**.mechost.mecPlatform.mecService[0].localPort = 10020
+
+**.mechost.mecPlatform.mecService[0].rng-1 = 1 # subscription service time
+**.mechost.mecPlatform.mecService[0].rng-0 = 0 # request service time
+**.mechost.mecPlatform.mecService[0].requestServiceTime = 100us
+**.mechost.mecPlatform.mecService[0].subscriptionServiceTime = 11us
+
+**.mechost.mecPlatform.serviceRegistry.localAddress = "mechost.mecPlatform" #da cambiare!!
+**.mechost.mecPlatform.serviceRegistry.localPort = 10021
+
+**.mecHost.mecPlatform.serviceRegistry.rng-1 = 1 # subscription service time
+**.mechost.mecPlatform.serviceRegistry.rng-0 = 0 # request service time
 
 
 ###
@@ -87,12 +119,52 @@ sim-time-limit = 70s
 *.car.app[1].startTime = 0.05s
 *.car.app[1].parkTime = 30s
 
-*.fakeclient.numApps = 1
+*.fakeclient.numApps = 2
 *.fakeclient.app[0].typename = "InstantiationMecpm"
 *.fakeclient.app[0].localPort = 3222
 *.fakeclient.app[0].destPort = 3334
 *.fakeclient.app[0].destAddress = "mechost.mecPlatformManager" 
 *.fakeclient.app[0].localAddress = "fakeclient"
+*.fakeclient.app[0].terminate = false
+*.fakeclient.app[0].term_delay = 1.5
+*.fakeclient.app[0].start_delay = 1.5
+*.fakeclient.app[0].appID = 221
+*.fakeclient.app[0].contextID = 0
+
+*.fakeclient.app[1].typename = "UEAppInteractionTester"
+*.fakeclient.app[1].localAddress = "fakeclient"
+*.fakeclient.app[1].localPort = 4444
+*.fakeclient.app[1].targetMecAppAddress = "car" 
+*.fakeclient.app[1].targetMecAppPort = 10001
+*.fakeclient.app[1].startDelay = 2.0
+*.fakeclient.app[1].positionX = 270
+*.fakeclient.app[1].positionY = 245
+*.fakeclient.app[1].radius = 30
+
+## FAKE CLIENT 2
+*.fakeclient2.numApps = 2
+*.fakeclient2.app[0].typename = "InstantiationMecpm"
+*.fakeclient2.app[0].localPort = 3222
+*.fakeclient2.app[0].destPort = 3334
+*.fakeclient2.app[0].destAddress = "mechost.mecPlatformManager" 
+*.fakeclient2.app[0].localAddress = "fakeclient2"
+*.fakeclient2.app[0].terminate = false
+*.fakeclient2.app[0].term_delay = 3.0
+*.fakeclient2.app[0].start_delay = 2.0 
+*.fakeclient2.app[0].appID = 222
+*.fakeclient2.app[0].contextID = 1
+
+*.fakeclient2.app[1].typename = "UEAppInteractionTester"
+*.fakeclient2.app[1].localAddress = "fakeclient"
+*.fakeclient2.app[1].localPort = 4444
+*.fakeclient2.app[1].targetMecAppAddress = "car" 
+*.fakeclient2.app[1].targetMecAppPort = 10002
+*.fakeclient2.app[1].startDelay = 5.0
+*.fakeclient2.app[1].positionX = 542
+*.fakeclient2.app[1].positionY = 230
+*.fakeclient2.app[1].radius = 30
+
+####
 
 *.server.numApps = 2
 *.server.app[0].typename = "HttpBrokerApp"
