Update simulation with latests vim changes

--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -40,6 +40,10 @@ num-rngs = 3
 **.car.mobility.initialMovementHeading = 0deg
 **.car.mobility.speed = 10mps
 
+*.car2.mobilityType = "LinearMobility"
+**.car2.mobility.initialMovementHeading = 0deg
+**.car2.mobility.speed = 10mps
+
 *.fakeclient.mobilityType = "LinearMobility"
 **.fakeclient.mobility.initialMovementHeading = 0deg
 **.fakeclient.mobility.speed = 10mps
@@ -48,11 +52,11 @@ num-rngs = 3
 **.fakeclient2.mobility.initialMovementHeading = 90deg
 **.fakeclient2.mobility.speed = 10mps
 
-*.car.cellularNic.nrPhy.dynamicCellAssociation = true
-*.car.masterId = 0     # ignored if dynamic association is disabled
-*.car.macCellId = 0    # ignored if dynamic association is disabled
-*.car.nrMasterId = 1     # ignored if dynamic association is disabled
-*.car.nrMacCellId = 1    # ignored if dynamic association is disabled
+*.car*.cellularNic.nrPhy.dynamicCellAssociation = true
+*.car*.masterId = 0     # ignored if dynamic association is disabled
+*.car*.macCellId = 0    # ignored if dynamic association is disabled
+*.car*.nrMasterId = 1     # ignored if dynamic association is disabled
+*.car*.nrMacCellId = 1    # ignored if dynamic association is disabled
 
 *.fakeclient*.cellularNic.nrPhy.dynamicCellAssociation = true
 *.fakeclient*.masterId = 0     # ignored if dynamic association is disabled
@@ -96,6 +100,7 @@ num-rngs = 3
 *.mechost.vim.app[0].localAddress = "mechost.vim" 
 *.mechost.vim.app[0].serverDestAddress = "mechost.vim"
 *.mechost.vim.app[0].brokerAddress = "server"
+*.mechost.vim.app[0].searchType = "ROUND_ROBIN"
 *.mechost.vim.app[1].localAddress = "mechost.vim"
 *.mechost.vim.app[1].vimAddress = "mechost.vim"
 *.mechost.vim.app[1].vimPort = 3333
@@ -118,6 +123,21 @@ num-rngs = 3
 *.car.app[1].viPort = 2222
 *.car.app[1].startTime = 0.05s
 *.car.app[1].parkTime = 30s
+
+*.car2.numApps = 2
+*.car2.app[0].typename = "VirtualisationInfrastructureApp"
+*.car2.app[0].localPort = 2222
+*.car2.app[0].localAddress = "car2"
+*.car2.app[0].vimAddress = "mechost.vim"
+*.car2.app[0].vimPort = 3333
+*.car2.app[1].typename = "ClientResourceApp"
+*.car2.app[1].localPort = 3333
+#*.car2.app[1].destPort = 3333
+*.car2.app[1].destAddress = "server" 
+*.car2.app[1].localAddress = "car2"
+*.car2.app[1].viPort = 2222
+*.car2.app[1].startTime = 0.05s
+*.car2.app[1].parkTime = 30s
 
 *.fakeclient.numApps = 2
 *.fakeclient.app[0].typename = "InstantiationMecpm"
@@ -157,8 +177,8 @@ num-rngs = 3
 *.fakeclient2.app[1].typename = "UEAppInteractionTester"
 *.fakeclient2.app[1].localAddress = "fakeclient"
 *.fakeclient2.app[1].localPort = 4444
-*.fakeclient2.app[1].targetMecAppAddress = "car" 
-*.fakeclient2.app[1].targetMecAppPort = 10002
+*.fakeclient2.app[1].targetMecAppAddress = "car2" 
+*.fakeclient2.app[1].targetMecAppPort = 10001
 *.fakeclient2.app[1].startDelay = 5.0
 *.fakeclient2.app[1].positionX = 542
 *.fakeclient2.app[1].positionY = 230
