--- a/simulations/OrchestrationSimu/omnetpp.ini
+++ b/simulations/OrchestrationSimu/omnetpp.ini
@@ -5,12 +5,15 @@ network = simulation_examples.simulations.OrchestrationSimu.OrchestratorNet
 *.meo.app[0].typename = "MecOrchestratorApp"
 *.meo.app[0].localAddress = "meo"
 *.meo.app[0].localPort = 9876
+*.meo.app[0].mecApplicationPackageList = "WarningAlertApp"
 
-*.vim.numApps = 2
-*.vim.app[*].typename = "MEOTester"
+*.vim*.numApps = 2
+*.vim*.app[*].typename = "MEOTester"
 *.vim.app[*].localAddress = "vim"
-*.vim.app[0].localPort = 3456
-*.vim.app[1].localPort = 3458
-*.vim.app[1].referencePointType = "mm3"
-*.vim.app[*].meoPort = 9876
-*.vim.app[*].meoAddress = "meo"
+*.vim1.app[*].localAddress = "vim1"
+#*.vim2.app[*].localAddress = "vim2"
+*.vim*.app[0].localPort = 3456
+*.vim*.app[1].localPort = 3458
+*.vim*.app[1].referencePointType = "mm3"
+*.vim*.app[*].meoPort = 9876
+*.vim*.app[*].meoAddress = "meo"
