Update simulation parameters to test termination phase

--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -139,14 +139,15 @@ num-rngs = 3
 *.car2.app[1].startTime = 0.05s
 *.car2.app[1].parkTime = 30s
 
+## FAKE CLIENT 2
 *.fakeclient.numApps = 2
 *.fakeclient.app[0].typename = "InstantiationMecpm"
 *.fakeclient.app[0].localPort = 3222
 *.fakeclient.app[0].destPort = 3334
 *.fakeclient.app[0].destAddress = "mechost.mecPlatformManager" 
 *.fakeclient.app[0].localAddress = "fakeclient"
-*.fakeclient.app[0].terminate = false
-*.fakeclient.app[0].term_delay = 1.5
+*.fakeclient.app[0].terminate = true
+*.fakeclient.app[0].term_delay = 10
 *.fakeclient.app[0].start_delay = 1.5
 *.fakeclient.app[0].appID = 221
 *.fakeclient.app[0].contextID = 0
