Update simulation for first stable version

--- a/simulations/OrchestratorSimu2/omnetpp.ini
+++ b/simulations/OrchestratorSimu2/omnetpp.ini
@@ -1,4 +1,6 @@
 [General]
+
+num-rngs = 3
 ##########################################################
 #              NR specific parameters                   #
 ##########################################################
@@ -30,6 +32,12 @@
 **.gNodeB1.macCellId = 1
 **.gNodeB1.macNodeId = 1
 
+*.mechost*.*.cellularNic.nrPhy.dynamicCellAssociation = true
+*.mechost*.*.masterId = 0     # ignored if dynamic association is disabled
+*.mechost*.*.macCellId = 0    # ignored if dynamic association is disabled
+*.mechost*.*.nrMasterId = 1     # ignored if dynamic association is disabled
+*.mechost*.*.nrMacCellId = 1    # ignored if dynamic association is disabled
+
 # tcp settings
 **.tcp.typename = "Tcp"
 **.tcp.advertisedWindow = 65535         # in bytes, corresponds with the maximal receiver buffer capacity (Note: normally, NIC queues should be at least this size)
@@ -54,10 +62,18 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 *.ue*.app[1].typename = "UEWarningAlertApp"
 
 *.ue.app[1].deviceAppAddress = "ue"
-*.ue2.app[1].deviceAppAddress = "ue2"
+#*.ue2.app[1].deviceAppAddress = "ue2"
 *.ue*.app[1].deviceAppPort = 4500
 *.ue*.app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
 *.ue*.app[1].stopTime = 30s
+
+*.ue.app[1].positionX = 340
+*.ue.app[1].positionY = 311
+*.ue.app[1].radius = 30
+
+*.ue.mobilityType = "LinearMobility"
+**.ue.mobility.initialMovementHeading = 0deg
+**.ue.mobility.speed = 10mps
 
 # UALCMP config
 *.ualcmp.isMEOapp = true
@@ -67,14 +83,56 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 *.mecOrchestrator.meoApp.localPort = 9876
 *.mecOrchestrator.meoApp.mecApplicationPackageList = "WarningAlertApp"
 
-# MECHost configuration
-*.mecHost*.numApps = 2
-*.mecHost*.app[*].typename = "MEOTester"
-*.mecHost1.app[*].localAddress = "mecHost1"
-*.mecHost2.app[*].localAddress = "mecHost2"
+## MECHost configuration
+**.mechost*.maxMECApps = 100	
+**.mechost*.eNBList = "gNodeB1"
+**.mechost*.color = "purple"
+# Vim
+*.mechost1.vim.vimApp.localAddress = "mechost1.vim"
+*.mechost1.vim.vimApp.localPort = 3333 
+*.mechost*.vim.vimApp.brokerAddress = ""
+*.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
+*.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
+*.mechost*.vim.vimApp.mepmPort = 3334
+*.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
+*.mechost*.vim.vimApp.meoPort = 9876
+*.mechost1.vim.viApp.localAddress = "mechost1.vim"
+*.mechost1.vim.viApp.vimAddress = "mechost1.vim"
+*.mechost*.vim.viApp.vimPort = 3333
+*.mechost1.vim.viApp.mp1Address = "mechost1.mecPlatform"
+*.mechost*.vim.viApp.mp1Port = 10021
+# Mepm
+*.mechost1.mecPlatformManager.mepmApp.localAddress = "mechost1.mecPlatformManager"
+*.mechost*.mecPlatformManager.mepmApp.localPort = 3334
+*.mechost1.mecPlatformManager.mepmApp.vimAddress = "mechost1.vim"
+*.mechost*.mecPlatformManager.mepmApp.vimPort = 3333
+*.mechost*.mecPlatformManager.mepmApp.meoAddress = "mecOrchestrator"
+*.mechost*.mecPlatformManager.mepmApp.meoPort = 9876
+# Mep
+**.mechost*.mecPlatform.numMecServices = 1
+**.mechost*.mecPlatform.mecService[0].typename = "LocationService"
+**.mechost1.mecPlatform.mecService[0].localAddress = "mechost1.mecPlatform" #da cambiare!!
+**.mechost*.mecPlatform.mecService[0].localPort = 10020
+
+**.mechost*.mecPlatform.mecService[0].rng-1 = 1 # subscription service time
+**.mechost*.mecPlatform.mecService[0].rng-0 = 0 # request service time
+**.mechost*.mecPlatform.mecService[0].requestServiceTime = 100us
+**.mechost*.mecPlatform.mecService[0].subscriptionServiceTime = 11us
+
+**.mechost1.mecPlatform.serviceRegistry.localAddress = "mechost1.mecPlatform" #da cambiare!!
+**.mechost*.mecPlatform.serviceRegistry.localPort = 10021
+
+**.mechost*.mecPlatform.serviceRegistry.rng-1 = 1 # subscription service time
+**.mechost*.mecPlatform.serviceRegistry.rng-0 = 0 # request service time
+
+
+#*.mecHost*.numApps = 2
+#*.mecHost*.app[*].typename = "MEOTester"
+#*.mecHost1.app[*].localAddress = "mecHost1"
+#*.mecHost2.app[*].localAddress = "mecHost2"
 #*.vim2.app[*].localAddress = "vim2"
-*.mecHost*.app[0].localPort = 3456
-*.mecHost*.app[1].localPort = 3458
-*.mecHost*.app[1].referencePointType = "mm3"
-*.mecHost*.app[*].meoPort = 9876
-*.mecHost*.app[*].meoAddress = "mecOrchestrator"
+#*.mecHost*.app[0].localPort = 3456
+#*.mecHost*.app[1].localPort = 3458
+#*.mecHost*.app[1].referencePointType = "mm3"
+#*.mecHost*.app[*].meoPort = 9876
+#*.mecHost*.app[*].meoAddress = "mecOrchestrator"
