--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -90,7 +90,7 @@ num-rngs = 3
 **.mechost.mecPlatform.serviceRegistry.localAddress = "mechost.mecPlatform" #da cambiare!!
 **.mechost.mecPlatform.serviceRegistry.localPort = 10021
 
-**.mecHost.mecPlatform.serviceRegistry.rng-1 = 1 # subscription service time
+**.mechost.mecPlatform.serviceRegistry.rng-1 = 1 # subscription service time
 **.mechost.mecPlatform.serviceRegistry.rng-0 = 0 # request service time
 
 
