--- a/simulations/OrchestratorSimu2/omnetpp.ini
+++ b/simulations/OrchestratorSimu2/omnetpp.ini
@@ -38,6 +38,12 @@ num-rngs = 3
 *.mechost*.*.nrMasterId = 1     # ignored if dynamic association is disabled
 *.mechost*.*.nrMacCellId = 1    # ignored if dynamic association is disabled
 
+*.car*.cellularNic.nrPhy.dynamicCellAssociation = true
+*.car*.masterId = 0     # ignored if dynamic association is disabled
+*.car*.macCellId = 0    # ignored if dynamic association is disabled
+*.car*.nrMasterId = 1     # ignored if dynamic association is disabled
+*.car*.nrMacCellId = 1    # ignored if dynamic association is disabled
+
 # tcp settings
 **.tcp.typename = "Tcp"
 **.tcp.advertisedWindow = 65535         # in bytes, corresponds with the maximal receiver buffer capacity (Note: normally, NIC queues should be at least this size)
@@ -51,6 +57,31 @@ num-rngs = 3
 [Config Test1]
 network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 
+#------------Server configuration---------------
+*.server.numApps = 2
+*.server.app[0].typename = "HttpBrokerApp"
+*.server.app[1].typename = "ResourceRegisterApp"
+*.server.app[1].startTime = 0.02s
+
+#------------MecCar configuration---------------
+*.car*.numApps = 1
+*.car*.viApp.localPort = 2222
+*.car.viApp.localAddress = "car"
+*.car2.viApp.localAddress = "car2"
+*.car*.viApp.vimAddress = "mechost1.vim"
+*.car*.viApp.vimPort = 3333
+*.car*.viApp.mp1Address = "mechost1.mecPlatform"
+*.car*.viApp.mp1Port = 10021
+*.car*.app[0].typename = "ClientResourceApp"
+*.car*.app[0].localPort = 3333
+#*.car.app[0].destPort = 3333
+*.car*.app[0].destAddress = "server" 
+*.car.app[0].localAddress = "car"
+*.car2.app[0].localAddress = "car2"
+*.car*.app[0].viPort = 2222
+*.car*.app[0].startTime = 0.05s
+*.car*.app[0].parkTime = 30s
+
 #------------UEWarningAlertApp---------------
 *.ue*.numApps = 2
 *.ue*.app[0].typename = "DeviceApp"
@@ -62,7 +93,7 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 *.ue*.app[1].typename = "UEWarningAlertApp"
 
 *.ue.app[1].deviceAppAddress = "ue"
-#*.ue2.app[1].deviceAppAddress = "ue2"
+*.ue2.app[1].deviceAppAddress = "ue2"
 *.ue*.app[1].deviceAppPort = 4500
 *.ue*.app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
 *.ue*.app[1].stopTime = 30s
@@ -71,9 +102,13 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 *.ue.app[1].positionY = 311
 *.ue.app[1].radius = 30
 
-*.ue.mobilityType = "LinearMobility"
-**.ue.mobility.initialMovementHeading = 0deg
-**.ue.mobility.speed = 10mps
+*.ue2.app[1].positionX = 340
+*.ue2.app[1].positionY = 411
+*.ue2.app[1].radius = 30
+
+*.ue*.mobilityType = "LinearMobility"
+**.ue*.mobility.initialMovementHeading = 0deg
+**.ue*.mobility.speed = 10mps
 
 # UALCMP config
 *.ualcmp.isMEOapp = true
@@ -90,7 +125,7 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 # Vim
 *.mechost1.vim.vimApp.localAddress = "mechost1.vim"
 *.mechost1.vim.vimApp.localPort = 3333 
-*.mechost*.vim.vimApp.brokerAddress = ""
+*.mechost*.vim.vimApp.brokerAddress = "server"
 *.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
 *.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
 *.mechost*.vim.vimApp.mepmPort = 3334
