Update simulation with InstantiationApplicationRequest

--- a/simulations/OrchestratorSimu2/omnetpp.ini
+++ b/simulations/OrchestratorSimu2/omnetpp.ini
@@ -131,6 +131,8 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 *.mechost*.vim.vimApp.mepmPort = 3334
 *.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
 *.mechost*.vim.vimApp.meoPort = 9876
+*.mechost*.vim.vimApp.mp1Address = "mechost1.mecPlatform"
+*.mechost*.vim.vimApp.mp1Port = 10021
 *.mechost1.vim.viApp.localAddress = "mechost1.vim"
 *.mechost1.vim.viApp.vimAddress = "mechost1.vim"
 *.mechost*.vim.viApp.vimPort = 3333
