--- a/simulations/OrchestratorSimu2/omnetpp.ini
+++ b/simulations/OrchestratorSimu2/omnetpp.ini
@@ -136,8 +136,9 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 *.mechost1.vim.viApp.localAddress = "mechost1.vim"
 *.mechost1.vim.viApp.vimAddress = "mechost1.vim"
 *.mechost*.vim.viApp.vimPort = 3333
-*.mechost1.vim.viApp.mp1Address = "mechost1.mecPlatform"
-*.mechost*.vim.viApp.mp1Port = 10021
+#*.mechost1.vim.viApp.mp1Address = "mechost1.mecPlatform"
+#*.mechost*.vim.viApp.mp1Port = 10021
+
 # Mepm
 *.mechost1.mecPlatformManager.mepmApp.localAddress = "mechost1.mecPlatformManager"
 *.mechost*.mecPlatformManager.mepmApp.localPort = 3334
