Added example MECHost with upf - This example works only with a particular branch of Simu5g (upf-mechost)

--- a/simulations/MecHostUPF/omnetpp.ini
+++ b/simulations/MecHostUPF/omnetpp.ini
@@ -55,7 +55,7 @@ num-rngs = 3
 
 
 [Config Test1]
-network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
+network = simulation_examples.simulations.MecHostUPF.MHUpfNetwork
 
 #------------Server configuration---------------
 *.server.numApps = 2
@@ -63,24 +63,24 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 *.server.app[1].typename = "ResourceRegisterApp"
 *.server.app[1].startTime = 0.02s
 
-##------------MecCar configuration---------------
-#*.car*.numApps = 1
-#*.car*.viApp.localPort = 2222
-#*.car.viApp.localAddress = "car"
-#*.car2.viApp.localAddress = "car2"
-#*.car*.viApp.vimAddress = "mechost1.vim"
-#*.car*.viApp.vimPort = 3333
-#*.car*.viApp.mp1Address = "mechost1.mecPlatform"
-#*.car*.viApp.mp1Port = 10021
-#*.car*.app[0].typename = "ClientResourceApp"
-#*.car*.app[0].localPort = 3333
-##*.car.app[0].destPort = 3333
-#*.car*.app[0].destAddress = "server" 
-#*.car.app[0].localAddress = "car"
-#*.car2.app[0].localAddress = "car2"
-#*.car*.app[0].viPort = 2222
-#*.car*.app[0].startTime = 0.05s
-#*.car*.app[0].parkTime = 30s
+###------------MecCar configuration---------------
+*.car*.numApps = 1
+*.car*.viApp.localPort = 2222
+*.car.viApp.localAddress = "car"
+*.car2.viApp.localAddress = "car2"
+*.car*.viApp.vimAddress = "mechost1.vim"
+*.car*.viApp.vimPort = 3333
+*.car*.viApp.mp1Address = "mechost1.mecPlatform"
+*.car*.viApp.mp1Port = 10021
+*.car*.app[0].typename = "ClientResourceApp"
+*.car*.app[0].localPort = 3333
+#*.car.app[0].destPort = 3333
+*.car*.app[0].destAddress = "server" 
+*.car.app[0].localAddress = "car"
+*.car2.app[0].localAddress = "car2"
+*.car*.app[0].viPort = 2222
+*.car*.app[0].startTime = 0.05s
+*.car*.app[0].parkTime = 30s
 
 #------------UEWarningAlertApp---------------
 *.ue*.numApps = 2
@@ -93,18 +93,18 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 *.ue*.app[1].typename = "UEWarningAlertApp"
 
 *.ue.app[1].deviceAppAddress = "ue"
-*.ue2.app[1].deviceAppAddress = "ue2"
+#*.ue2.app[1].deviceAppAddress = "ue2"
 *.ue*.app[1].deviceAppPort = 4500
 *.ue*.app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
-*.ue*.app[1].stopTime = 10s
+*.ue*.app[1].stopTime = 20s
 
 *.ue.app[1].positionX = 340
 *.ue.app[1].positionY = 311
 *.ue.app[1].radius = 30
 
-*.ue2.app[1].positionX = 340
-*.ue2.app[1].positionY = 411
-*.ue2.app[1].radius = 30
+#*.ue2.app[1].positionX = 340
+#*.ue2.app[1].positionY = 411
+#*.ue2.app[1].radius = 30
 
 *.ue*.mobilityType = "LinearMobility"
 **.ue*.mobility.initialMovementHeading = 0deg
@@ -123,29 +123,38 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 **.mechost*.eNBList = "gNodeB1"
 **.mechost*.color = "purple"
 # Vim
-*.mechost1.vim.vimApp.localAddress = "mechost1.vim"
-*.mechost1.vim.vimApp.localPort = 3333 
-*.mechost*.vim.vimApp.brokerAddress = "server"
-*.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
-*.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
-*.mechost*.vim.vimApp.mepmPort = 3334
-*.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
-*.mechost*.vim.vimApp.meoPort = 9876
-*.mechost*.vim.vimApp.mp1Address = "mechost1.mecPlatform"
-*.mechost*.vim.vimApp.mp1Port = 10021
-*.mechost1.vim.viApp.localAddress = "mechost1.vim"
-*.mechost1.vim.viApp.vimAddress = "mechost1.vim"
-*.mechost*.vim.viApp.vimPort = 3333
-#*.mechost1.vim.viApp.mp1Address = "mechost1.mecPlatform"
-#*.mechost*.vim.viApp.mp1Port = 10021
+*.mechost1.vim.numApps = 2
+*.mechost1.vim.app[0].typename = "VirtualisationInfrastructureManagerDyn"
+*.mechost1.vim.app[0].localAddress = "mechost1.vim"
+*.mechost1.vim.app[0].localPort = 3333 
+*.mechost1.vim.app[0].brokerAddress = "server"
+*.mechost1.vim.app[0].searchType = "ROUND_ROBIN"
+*.mechost1.vim.app[0].mepmAddress = "mechost1.mecPlatformManager"
+*.mechost1.vim.app[0].mepmPort = 3334
+*.mechost1.vim.app[0].meoAddress = "mecOrchestrator"
+*.mechost1.vim.app[0].meoPort = 9876
+*.mechost1.vim.app[0].mp1Address = "mechost1.mecPlatform"
+*.mechost1.vim.app[0].mp1Port = 10021
+
+# VI config
+*.mechost1.vim.app[1].typename = "VirtualisationInfrastructureApp"
+*.mechost1.vim.app[1].localAddress = "mechost1.vim"
+*.mechost1.vim.app[1].vimAddress = "mechost1.vim"
+*.mechost1.vim.app[1].vimPort = 3333
+
+#*.mechost1.vim.app[]
+
 
 # Mepm
-*.mechost1.mecPlatformManager.mepmApp.localAddress = "mechost1.mecPlatformManager"
-*.mechost*.mecPlatformManager.mepmApp.localPort = 3334
-*.mechost1.mecPlatformManager.mepmApp.vimAddress = "mechost1.vim"
-*.mechost*.mecPlatformManager.mepmApp.vimPort = 3333
-*.mechost*.mecPlatformManager.mepmApp.meoAddress = "mecOrchestrator"
-*.mechost*.mecPlatformManager.mepmApp.meoPort = 9876
+*.mechost1.mecPlatformManager.numApps = 1
+*.mechost1.mecPlatformManager.app[0].typename = "MecPlatformManagerDyn"
+*.mechost1.mecPlatformManager.app[0].localAddress = "mechost1.mecPlatformManager"
+*.mechost1.mecPlatformManager.app[0].localPort = 3334
+*.mechost1.mecPlatformManager.app[0].vimAddress = "mechost1.vim"
+*.mechost1.mecPlatformManager.app[0].vimPort = 3333
+*.mechost1.mecPlatformManager.app[0].meoAddress = "mecOrchestrator"
+*.mechost1.mecPlatformManager.app[0].meoPort = 9876
+
 # Mep
 **.mechost*.mecPlatform.numMecServices = 1
 **.mechost*.mecPlatform.mecService[0].typename = "LocationService"
