new version of final simulation - updated with new mechost

--- a/simulations/FinalCompleteSimulation/omnetpp.ini
+++ b/simulations/FinalCompleteSimulation/omnetpp.ini
@@ -55,7 +55,8 @@ num-rngs = 3
 
 
 [Config Test1]
-network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
+network = simulation_examples.simulations.FinalCompleteSimulation.RealOrchNetwork
+sim-time-limit=40s
 
 #------------Server configuration---------------
 *.server.numApps = 2
@@ -64,23 +65,23 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 *.server.app[1].startTime = 0.02s
 
 ##------------MecCar configuration---------------
-#*.car*.numApps = 1
-#*.car*.viApp.localPort = 2222
-#*.car.viApp.localAddress = "car"
-#*.car2.viApp.localAddress = "car2"
-#*.car*.viApp.vimAddress = "mechost1.vim"
-#*.car*.viApp.vimPort = 3333
-#*.car*.viApp.mp1Address = "mechost1.mecPlatform"
-#*.car*.viApp.mp1Port = 10021
-#*.car*.app[0].typename = "ClientResourceApp"
-#*.car*.app[0].localPort = 3333
-##*.car.app[0].destPort = 3333
-#*.car*.app[0].destAddress = "server" 
-#*.car.app[0].localAddress = "car"
-#*.car2.app[0].localAddress = "car2"
-#*.car*.app[0].viPort = 2222
-#*.car*.app[0].startTime = 0.05s
-#*.car*.app[0].parkTime = 30s
+*.car*.numApps = 1
+*.car*.viApp.localPort = 2222
+*.car.viApp.localAddress = "car"
+*.car2.viApp.localAddress = "car2"
+*.car*.viApp.vimAddress = "mechost1.vim"
+*.car*.viApp.vimPort = 3333
+*.car*.viApp.mp1Address = "mechost1.mecPlatform"
+*.car*.viApp.mp1Port = 10021
+*.car*.app[0].typename = "ClientResourceApp"
+*.car*.app[0].localPort = 3333
+#*.car.app[0].destPort = 3333
+*.car*.app[0].destAddress = "server" 
+*.car.app[0].localAddress = "car"
+*.car2.app[0].localAddress = "car2"
+*.car*.app[0].viPort = 2222
+*.car*.app[0].startTime = 0.05s
+*.car*.app[0].parkTime = 30s
 
 #------------UEWarningAlertApp---------------
 *.ue*.numApps = 2
@@ -96,7 +97,7 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 *.ue2.app[1].deviceAppAddress = "ue2"
 *.ue*.app[1].deviceAppPort = 4500
 *.ue*.app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
-*.ue*.app[1].stopTime = 10s
+*.ue*.app[1].stopTime = 25s
 
 *.ue.app[1].positionX = 340
 *.ue.app[1].positionY = 311
@@ -164,13 +165,3 @@ network = simulation_examples.simulations.OrchestratorSimu2.RealOrchNetwork
 **.mechost*.mecPlatform.serviceRegistry.rng-0 = 0 # request service time
 
 
-#*.mecHost*.numApps = 2
-#*.mecHost*.app[*].typename = "MEOTester"
-#*.mecHost1.app[*].localAddress = "mecHost1"
-#*.mecHost2.app[*].localAddress = "mecHost2"
-#*.vim2.app[*].localAddress = "vim2"
-#*.mecHost*.app[0].localPort = 3456
-#*.mecHost*.app[1].localPort = 3458
-#*.mecHost*.app[1].referencePointType = "mm3"
-#*.mecHost*.app[*].meoPort = 9876
-#*.mecHost*.app[*].meoAddress = "mecOrchestrator"
