--- a/simulations/MecHostUPF/omnetpp.ini
+++ b/simulations/MecHostUPF/omnetpp.ini
@@ -11,6 +11,9 @@ num-rngs = 3
 **.targetBler = 0.01
 **.blerShift = 5  
 
+############### IPv4 configurator config #################
+*.configurator.config = xmldoc("./demo.xml")
+
 #######################################################
 #        CA and channel model configuration           # 
 #######################################################
@@ -56,6 +59,7 @@ num-rngs = 3
 
 [Config Test1]
 network = simulation_examples.simulations.MecHostUPF.MHUpfNetwork
+sim-time-limit=40s
 
 #------------Server configuration---------------
 *.server.numApps = 2
